<resources>
    <string name="app_name">Ostiarius</string>

    // Main Activity
    <string name="welcome">WELCOME</string>
    <string name="to_ostiarius">TO OSTIARIUS</string>
    <string name="home">Home</string>
    <string name="Alerts"></string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="alert_overview">Smart Physical Security Monitoring System</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string-array name="titles">
        <item>Alert!</item>
        <item>Alert!</item>
        <item>Alert!</item>
        <item>Alert!</item>
        <item>Alert!</item>
    </string-array>
    <string-array name="description">
        <item>DSLR Camera, Item #2509 has left the room.</item>
        <item>MacBook – Apple, Item #1143 has left the room.</item>
        <item>LG Smart TV, Item #5548 has left the room.</item>
        <item>Nikon D5300, Item #2968 has left the room.</item>
        <item>Camera Stand, Item #8194 has left the room.</item>
    </string-array>
</resources>
