<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id = "@+id/home_icon"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:onClick="scrollToTop"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="228dp"
        android:src="@drawable/home"
        android:background="@null"/>

    <TextView
        android:id="@+id/clickhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="316dp"
        android:textSize="20sp"
        android:text="@string/home"
        android:textColor="#FFFFFF"/>

    <!--vertical-->
    <View
        android:layout_width="1dp"
        android:layout_height="115dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="218dp"
        android:background="@color/line"/>

    <ImageButton
        android:id="@+id/alertsicon"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:onClick="scrollToTop"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="228dp"
        android:src="@drawable/alerts"
        android:background="@null"/>

    <TextView
        android:id="@+id/clickalerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="316dp"
        android:textSize="20sp"
        android:text="@string/alerts"
        android:textColor="#FFFFFF"/>

    <!--horizontal-->
    <View
        android:layout_width="115dp"
        android:layout_height="1dp"
        android:layout_marginTop="353dp"
        android:layout_marginLeft="200dp"
        android:background="@color/line"/>

    <ImageButton
        android:id="@+id/settingsicon"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:onClick="scrollToTop"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="373dp"
        android:src="@drawable/settings"
        android:background="@null"/>

    <TextView
        android:id="@+id/clicksettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="455dp"
        android:textSize="20sp"
        android:text="@string/settings"
        android:textColor="#FFFFFF"/>

    <!--vertical-->
    <View
        android:layout_width="1dp"
        android:layout_height="115dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="370dp"
        android:background="@color/line"/>

    <ImageButton
        android:id="@+id/searchicon"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:onClick="scrollToTop"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="373dp"
        android:src="@drawable/search"
        android:background="@null"/>

    <TextView
        android:id="@+id/clicksearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="455dp"
        android:textSize="20sp"
        android:text="@string/search"
        android:textColor="#FFFFFF"/>

    <!--horizontal-->
    <View
        android:layout_width="105dp"
        android:layout_height="1dp"
        android:layout_marginTop="353dp"
        android:layout_marginLeft="57dp"
        android:background="@color/line"/>


    <TextView
        android:id="@+id/overview_alerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/alert_overview"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/to_ostiarius"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/to_ostiarius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/to_ostiarius"
        android:textColor="#CDCDCD"
        android:textSize="24sp"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textColor="#848484"
        android:fontFamily="sadsad"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <!--android:layout_marginTop="12dp"-->
</RelativeLayout>